# mrdl

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_live_updates.py  example_multi_progress.py  example_pause_resume.py  example_shared_throttle.py  example_single.py  example_standalone_verify.py
src/mrdl/: __init__.py  cli.py  downloader.py  exceptions.py  fetcher.py  hasher.py  mirror_health.py  mmap_writer.py  prober.py  progress.py  protocols.py  session.py  state.py  throttle.py  types.py  worker_pool.py  writer.py
tests/: test_api_contract.py  test_downloader.py  test_fetcher.py  test_hasher.py  test_integration.py  test_mmap_writer.py  test_persistence.py  test_prober.py  test_progress.py  test_single_mirror_speed.py  test_spinner.py  test_state.py  test_throttle.py  test_writer.py
