[project]
name = "mrdl"
version = "0.1.0"
description = "Mirror Downloader Python Package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    'uvloop>=0.22.1; sys_platform != "win32"',
]

[project.scripts]
mrdl = "mrdl.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-httpserver>=1.0.10",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrdl"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"
